--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'kotlin-android'
-//apply plugin: 'kotlin-kapt' // kapt 插件
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt' // kapt 插件
 
 android {
     namespace 'com.example.facedetect'
@@ -26,13 +26,26 @@ android {
         }
     }
 
+    buildFeatures {
+        viewBinding = true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
 
     ndkVersion '27.1.12297006'
 
     dependencies {
         implementation fileTree(include: ['*.jar'], dir: 'libs')//本地jar包依赖
         implementation('androidx.constraintlayout:constraintlayout:2.1.4')
-//    implementation('androidx.activity:activity-ktx:1.9.2')
+//        implementation('androidx.activity:activity-ktx:1.9.2')
         implementation('com.google.android.material:material:1.5.0')
 //    implementation 'androidx.annotation:annotation:1.3.0'
 //        implementation 'androidx.annotation:annotation:+'
@@ -41,4 +54,6 @@ android {
         androidTestImplementation 'com.android.support.test:runner:1.0.2'
         androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     }
+
 }
+
