--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.example.facedetect"
-      android:versionCode="1"
-      android:versionName="1.1">
+    package="com.example.facedetect"
+    android:versionCode="1"
+    android:versionName="1.1">
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera2.full" />
 
-    <application android:label="@string/app_name" android:extractNativeLibs="true">
-        <activity android:name="com.example.facedetect.MainActivity"
-                  android:label="@string/app_name"
-                  android:screenOrientation="portrait">
+    <application
+        android:extractNativeLibs="true"
+        android:label="@string/app_name">
+        <activity
+            android:name="com.example.facedetect.MainActivity"
+            android:exported="true"
+            android:theme="@style/BaseActivityTheme">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
