--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-//    ext.kotlin_version = '1.9.0'
+    ext.kotlin_version = '1.9.0'
     repositories {
         repositories {
             maven { url 'https://maven.aliyun.com/repository/public' }
@@ -30,7 +30,7 @@ buildscript {
         }
         dependencies {
             classpath "com.android.tools.build:gradle:8.0.0"
-//            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         }
     }
