--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
     <application
         android:extractNativeLibs="true"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name">
         <activity
             android:name="com.example.facedetect.MainActivity"
