--- a/app/src/main/jni/CMakeLists.txt
+++ b/app/src/main/jni/CMakeLists.txt
@@ -11,3 +11,7 @@ find_package(ncnn REQUIRED)
 add_library(scrfdncnn SHARED scrfdncnn.cpp scrfd.cpp ndkcamera.cpp)
 
 target_link_libraries(scrfdncnn ncnn ${OpenCV_LIBS} camera2ndk mediandk)
+
+add_library(ncnnyoloface SHARED yolofacencnn.cpp yoloface.cpp ndkcamera.cpp)
+
+target_link_libraries(ncnnyoloface ncnn ${OpenCV_LIBS} camera2ndk mediandk)
