--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.facedetect"
+    package="com.example.yolofacedetect"
     android:versionCode="1"
     android:versionName="1.1">
 
@@ -12,7 +12,7 @@
         android:icon="@drawable/app_icon"
         android:label="@string/app_name">
         <activity
-            android:name="com.example.facedetect.MainActivity"
+            android:name="com.example.facedetect.YoloMainActivity"
             android:exported="true"
             android:theme="@style/BaseActivityTheme">
 
